# btypes

./: README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
btypes/: _types.py
tests/: test_generics.py  test_isinstance.py
